set(CXXTEST_USE_PYTHON TRUE)
find_package(CxxTest)
if(CXXTEST_FOUND)
   include_directories(${CXXTEST_INCLUDE_DIR})
   ENABLE_TESTING()
   CXXTEST_ADD_TEST(mh_api_network_unittest mh_api_network_unittest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/mh_api_network.h)
   target_link_libraries(mh_api_network_unittest mnetwork)
   message(STATUS "Testing Found.")
endif(CXXTEST_FOUND)

file(GLOB SRCS "*.cpp")
file(GLOB HEADERS "*.h")
install(FILES ${SRCS} ${HEADERS} DESTINATION share/matahari/tests)
