set(CXXTEST_USE_PYTHON TRUE)
find_package(CxxTest)
if(CXXTEST_FOUND)
   include_directories(${CXXTEST_INCLUDE_DIR})
   ENABLE_TESTING()
   CXXTEST_ADD_TEST(mh_api_network_unittest mh_api_network_unittest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/mh_api_network.h)
   target_link_libraries(mh_api_network_unittest mnetwork)
   CXXTEST_ADD_TEST(mh_api_host_unittest mh_api_host_unittest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/mh_api_host.h)
   add_library(mh_tester SHARED mh_test_utilities.c ../lib/utilities.c)
   target_link_libraries(mh_api_network_unittest mnetwork mh_tester)
   target_link_libraries(mh_api_host_unittest mhost pcre mh_tester)
endif(CXXTEST_FOUND)

file(GLOB SRCS "*.cpp")
file(GLOB HEADERS "*.h")
install(FILES ${SRCS} ${HEADERS} DESTINATION share/matahari/tests)

